# koffice-texthighlight

./: CMakeLists.txt
texthighlight/: CMakeLists.txt  Example.fodt  Highlight.cpp  Highlight.h  HighlightFactory.cpp  HighlightFactory.h  HighlightPlugin.cpp  HighlightPlugin.h  Messages.sh  kotexthighlight.desktop  kword-20091207.kcrash
